# cargo-tangerine

./: Cargo.toml  README.md
src/: main.rs  publish.rs  utils.rs
src/errors/: mod.rs
src/models/: manifest.rs
src/models/manifest/: mod.rs  package.rs  workspace.rs
src/subcommands/: list.rs  mod.rs  publish.rs
